Prevent establishment name clashing with search bar on smaller screens

--- a/assets/sass/components/_topbar.scss
+++ b/assets/sass/components/_topbar.scss
@@ -29,7 +29,6 @@
     & a {
       color: govuk-colour('white');
       text-decoration: none;
-      flex: 1 0 auto;
     }
 
     & a:hover {
